[project]
name = "meteo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.59.2",
]
